--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/react-dom": "^17.0.13",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.10",
-    "react": "^17.0.2",
+    "i18next": "^21.6.16",
+    "i18next-browser-languagedetector": "^6.1.4",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.0",
+    "react-i18next": "^11.16.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
