¨Updated to prod

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.74",
-    "@mui/material": "^5.5.1",
+    "@mui/material": "^5.8.2",
+    "@mui/styles": "^5.8.0",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
+    "@sendgrid/mail": "^7.7.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -18,8 +20,10 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
-    "firebase": "^9.6.10",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^9.8.2",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "js-cookie": "^3.0.1",
@@ -30,7 +34,9 @@
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.3",
     "sass": "^1.49.9",
+    "twilio": "^3.77.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
