--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "netlify-cli": "^10.6.2",
     "prettier": "2.6.0",
     "terser-brunch": "^4.1.0"
   }
