--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.13",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.8.2",
     "i18next": "^21.6.16",
