--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-TWILIO_ACCOUNT_SID=AC1d7edc99a8733911c64825f1323b3f0f
-TWILIO_ACCOUNT_TOKEN=dab56a2bed22b2cf585227c0daa048f8
-TWILIO_PHONE_NUMBER= +16066440943
+REACT_APP_TWILIO_ACCOUNT_SID=AC1d7edc99a8733911c64825f1323b3f0f
+REACT_APP_TWILIO_AUTH_TOKEN=dab56a2bed22b2cf585227c0daa048f8
+REACT_APP_TWILIO_PHONE_NUMBER= +16066440943
+TWILIO_ACCOUNT_SID=AC7fd312e15c45366303b737520bc5d9e4
+TWILIO_ACCOUNT_TOKEN=f0b13ddbb2341a48e0f42168a8ad5ba8
+TWILIO_PHONE_NUMBER= +19895026960
 REACT_APP_SENDGRID_AUTH_TOKEN=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
